Add example how to use Toast, Dialog and Snackbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HelloWorld</string>
+    <string name="text_name">Kucing Mumu</string>
+    <string name="text_test">Kucing Mumu</string>
+    <string name="text_description">Saya adalah kucing yang lucu sekali dan suka makan ayam goreng.</string>
 </resources>
